<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="205dp"
    android:layout_columnWeight="1"
    android:layout_gravity="fill"
    android:layout_margin="6dp"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/bg_card"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badge_most_talked"
        android:textSize="11sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:src="@drawable/cybersecurity_full"
        android:scaleType="centerInside"
        android:contentDescription="@string/course_name_full_course"/>

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_name_full_course"
        android:textSize="13sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:maxLines="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_rating_5_stars"
        android:textSize="11sp"
        android:textColor="@color/cv_primary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_simplilearn"
        android:textSize="11sp"
        android:textColor="@color/cv_text_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_description_pentest_short"
        android:textSize="11sp"
        android:textColor="@color/cv_text_light"
        android:maxLines="2"/>
</LinearLayout>
