<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/bg_card"
    android:elevation="2dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/certificate"
        android:scaleType="centerInside"
        android:contentDescription="@string/title_certification"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_title_advanced"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_provider_great_learning"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/cv_primary"
        android:layout_marginTop="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/certification_course_desc"
        android:textSize="11sp"
        android:textColor="@color/cv_text_light"
        android:layout_marginTop="8dp"/>
</LinearLayout>
