<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/bg_search"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp">

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_search"
        app:tint="@color/cv_text"
        android:contentDescription="@string/search_description"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/search_hint"
        android:textSize="11sp"
        android:singleLine="true"
        android:inputType="text"
        android:autofillHints="none"/>

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_filter"
        app:tint="@color/cv_text"
        android:contentDescription="@string/filter_description"/>
</LinearLayout>
