<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="48dp"
    android:orientation="horizontal"
    android:background="@drawable/bg_search"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:gravity="center"
    android:baselineAligned="false">

    <FrameLayout
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:background="@drawable/bg_purple"
        android:layout_marginEnd="6dp">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_home"
            app:tint="@color/cv_white"
            android:contentDescription="@string/nav_home"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/navShop"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_bag"
            app:tint="@color/cv_text"
            android:contentDescription="@string/nav_shop"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/navProfile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile"
            app:tint="@color/cv_text"
            android:contentDescription="@string/nav_profile"/>
    </FrameLayout>
</LinearLayout>
